fixed case sensitive file searching, changed to insensitive, fix get-covers to not throw error if folder is no longer on disk but update hasn't taken place

--- a/src/renderer/src/style/InfiniteList.css
+++ b/src/renderer/src/style/InfiniteList.css
@@ -110,6 +110,11 @@
   color: var(--blue1);
 }
 
+.metadata-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .item-menu {
   border: 1px solid gray;
   display: flex;
